breeze-icons (4:5.25.0-2) UNRELEASED; urgency=medium


 -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 27 Aug 2016 16:22:13 +0200

breeze-icons (4:5.25.0-1) unstable; urgency=medium

  [ Automatic packaging ]
  * Update build-deps and deps with the info from cmake

 -- Maximiliano Curia <maxy@debian.org>  Thu, 18 Aug 2016 17:20:33 +0200

breeze-icons (4:5.23.0-1) unstable; urgency=medium

  [ Automatic packaging ]
  * Update build-deps and deps with the info from cmake

 -- Maximiliano Curia <maxy@debian.org>  Sat, 18 Jun 2016 08:02:32 +0200

breeze-icons (4:5.22.0-2) unstable; urgency=medium

  * Make the icon theme arch:all

 -- Maximiliano Curia <maxy@debian.org>  Sat, 28 May 2016 16:42:38 +0200

breeze-icons (4:5.22.0-1) unstable; urgency=medium

  [ Automatic packaging ]
  * Update build-deps and deps with the info from cmake

 -- Maximiliano Curia <maxy@debian.org>  Thu, 19 May 2016 00:17:46 +0200

breeze-icons (4:5.21.0-1) experimental; urgency=medium

  [ Automatic packaging ]
  * Update build-deps and deps with the info from cmake
  * Bump Standards-Version to 3.9.8

 -- Maximiliano Curia <maxy@debian.org>  Thu, 05 May 2016 15:07:24 +0200

breeze-icons (4:5.19.0-1) experimental; urgency=medium

  * New upstream release (5.19.0).

 -- Maximiliano Curia <maxy@debian.org>  Sat, 13 Feb 2016 15:16:42 +0100

breeze-icons (4:5.18.0-1) experimental; urgency=medium

  [ Jonathan Riddell ]
  * Initial package, split upstream from breeze
  * Keep epoch so the binary package can still install
  * Remove oxygen-icon-theme depend, now inherits hicolor

  [ Maximiliano Curia ]
  * New upstream release (5.17)
  * New upstream release (5.18.0).

 -- Maximiliano Curia <maxy@debian.org>  Wed, 27 Jan 2016 13:34:43 +0100