@@ -6,6 +6,7 @@ Uploaders: Maximiliano Curia <maxy@debian.org>
 Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 9),
                extra-cmake-modules (>= 5.25.0~),
+               fdupes,
                pkg-kde-tools,
                qtbase5-dev (>= 5.5.0~)
 Standards-Version: 3.9.8
