@@ -1,5 +1,10 @@
 breeze-icons (4:5.25.0-2) UNRELEASED; urgency=medium
 
+  [ Pino Toscano ]
+  * De-duplicate common files:
+    - copy the symlink_duplicates.sh script from oxygen-icon5, and use it
+      in rules
+    - add the fdupes build dependency
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 27 Aug 2016 16:22:13 +0200
 
